--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "lib/aws-cloudwatch-statsd-backend.js",
   "dependencies": {
 	"fmt": "~0.4",
-	"awssum": "~0.10",
+	"awssum": "~1.0.0-beta",
+	"awssum-amazon-cloudwatch": "~1.0.0",
 	"underscore": "1.4.3",
 	"combinations": "0.1.0"
   },
